alongtheway-frontend/src/app/app.component.css
.map {
  width: 100%;
  height: 60vh;
  margin-top: 2px;
  margin-right: 8px;
  border-radius: 5px;
}

.column {
  display: flex;
  flex-direction: column;
  flex-basis: 100%;
  overflow-x: hidden;
  margin-right: 5px;
  margin-top: 2px;
  padding-left: 5px;
  padding-right: 5px;
}

.row {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 10px;
  font: 20px Roboto, "Helvetica Neue", sans-serif;
}

.alignleft {
  flex-basis: auto;
  text-align: left;
  width: 250px;
  font: 20px Roboto, "Helvetica Neue", sans-serif;
}

.alignright {
  border-radius: 5px;
  flex-basis: auto;
  text-align: left;
  width: 250px;

  font: 20px Roboto, "Helvetica Neue", sans-serif;
}

input[type="text"] {
   width: 242px;
}

h4 {
  font: 22px Roboto, "Helvetica Neue", sans-serif;
  font-weight: bold;
  font-style: italic;
  margin-top: 8px;
}

p {
  font: 20px Roboto, "Helvetica Neue", sans-serif;
  margin-left: 12px;
  margin-top: 5px;
}

.searchresults {
  border-style: solid;
  border-width: 2px;
  border-radius: 6px;
}

body {
  margin-top: 8px;
}

button#search {
  margin: 0 auto;
  font-size: 12pt;
  padding: 4px 14px;
  border-radius: 5px;
  background-color: #d1d1d1;
  box-shadow: 2px 3px #888888;
}

button#search:hover {
  background-color: #738fff;
}

button#search:active {
  background-color: #495dab;
  box-shadow: 2px 3px #666;
  transform: translateY(1px);
}

